--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="/src/index.css">
 </head>
   <body class="bg-slate-900 text-slate-100 antialiased w-full overflow-x-hidden">
     <div id="root"></div>
