--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StrumMaster - Guitar Rhythm Trainer</title>
+    <title>StrumMaster - Тренер ритма для гитары</title>
     <script src="https://cdn.tailwindcss.com"></script>
   <script type="importmap">
 {
